--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <div class="col-lg-6" data-zanim-timeline='{"delay":0.4}' data-zanim-trigger="scroll">
                     <div class="overflow-hidden">
                         <h1 class="fs-5 fs-md-4 text-white display-4" data-zanim-xs='{"delay":0.1}'>Youth
-                            Mountain Bike Racing Team in Cleveland</h1>
+                            Mountain Bike Racing in Cleveland</h1>
                     </div>
                     <div class="overflow-hidden">
                         <h4 class="fw-normal mb-4 text-white text-opacity-85 mt-5" data-zanim-xs='{"delay":0.2}'>For
@@ -126,7 +126,7 @@
 
     <!-- ============================================-->
     <!-- <section> begin ============================-->
-    <section class="text-center pb-0" id="bigcartelAbout">
+    <section class="text-center pb-0" id="whoweare">
 
         <div class="container">
             <div class="row justify-content-center">
@@ -136,19 +136,19 @@
                             href="https://nationalmtb.org/">National Interscholastic Cycling Association (NICA)</a> and
                         compete as part of the Ohio Interscholastic Cycling League. Open to students in grades 5-12, the
                         Gnarwhals emphasize teamwork, personal growth, and the joy of riding—no tryouts, no cuts, just a
-                        welcoming environment where everyone rides. The Gnarwhals primarily practice at the Medina mountain bike trail
+                        welcoming environment where everyone rides. The Gnarwhals primarily practice at the Medina
+                        mountain bike trail
                         system.</p>
-
                 </div>
             </div>
-            <div class="row mt-6">
-                <div class="col-md px-lg-2 mt-2 mt-lg-0"><img class="rounded img-fluid"
-                                                              src="assets/img/gnar-primary.png" alt=""
-                                                              data-zanim-lg='{"delay":0.1,"animation":"zoom-in"}'
-                                                              data-zanim-trigger="scroll"/></div>
-                <div class="col-md px-lg-2 mt-2 mt-lg-0">
-
-                    <img class="rounded img-fluid" src="assets/img/NICA-Large.png"
+            <div class="row mt-3 mb-3">
+                <div class="col-sm px-lg-2 mt-2 mt-lg-0">
+                    <img class="rounded img-fluid w-50"
+                         src="assets/img/gnar-primary.png" alt=""
+                         data-zanim-lg='{"delay":0.1,"animation":"zoom-in"}'
+                         data-zanim-trigger="scroll"/></div>
+                <div class="col-sm px-lg-2 mt-2 mt-lg-0">
+                    <img class="rounded img-fluid w-50" src="assets/img/NICA-Large.png"
                          alt="" data-zanim-lg='{"delay":0.3,"animation":"zoom-in"}'
                          data-zanim-trigger="scroll"/>
                 </div>
@@ -168,6 +168,7 @@
             <div class="row justify-content-center gy-4 gx-lg-4">
                 <div class="col-12 mb-3 mb-md-5 text-center">
                     <h2 class="fs-6 fs-sm-5"><span class="text-decoration-underline">Practices</span></h2>
+                    <p class="lead text-body-tertiary fst-italic">Our practices feature group rides and skill drills, creating a fun environment where kids can build friendships.</p>
                 </div>
                 <div class="col-lg-5">
                     <div class="d-flex" id="bootstrap5" data-zanim-trigger="scroll" data-zanim-timeline="{}">
@@ -297,7 +298,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <h1 class="mb-7 text-decoration-underline">Equipment</h1>
+                    <h1 class="text-decoration-underline">Equipment</h1>
+                    <p class="lead text-body-tertiary fst-italic">A bike, a helmet and a water bottle all you need.</p>
                 </div>
                 <div class="col-lg-6 pe-lg-6">
                     <div class="d-flex align-items-center mb-4">
@@ -327,17 +329,18 @@
 
     <!-- ============================================-->
     <!-- <section> begin ============================-->
-    <section id="costs">
+    <section id="costs" class="border-top">
 
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-6 mb-7 text-center">
                     <h2 class="fs-6 fs-sm-5 text-decoration-underline mb-3">Costs</h2>
+                    <p class="lead text-body-tertiary fst-italic">NICA and the North Coast Gnarwhals are 501(c)(3) non-profit organizations.</p>
                 </div>
             </div>
             <div class="row justify-content-center justify-content-md-start text-center text-md-start">
                 <div class="col-10 col-md-6 col-lg-4 pe-md-4 pe-lg-6" data-zanim-timeline="{}"
-                     data-zanim-trigger="scroll"><span class="text-black me-3 fs-2 fas fa-file-invoice-dollar"
+                     data-zanim-trigger="scroll"><span class="text-black me-3 fs-3 fas fa-file-invoice-dollar"
                                                        data-zanim-xs='{"delay":0.2,"animation":"slide-right"}'></span>
                     <div class="overflow-hidden mt-3">
                         <h2 data-zanim-xs='{"delay":0.1}'>Program Costs</h2>
@@ -352,15 +355,14 @@
                     </div>
                 </div>
                 <div class="col-10 col-md-6 col-lg-4 px-lg-4 mt-6 mt-md-0" data-zanim-timeline="{}"
-                     data-zanim-trigger="scroll"><span class="text-black me-3 fs-2 fas fa-flag-checkered"
+                     data-zanim-trigger="scroll"><span class="text-black me-3 fs-3 fas fa-flag-checkered"
                                                        data-zanim-xs='{"delay":0.2,"animation":"slide-right"}'></span>
                     <div class="overflow-hidden mt-3">
                         <h2 data-zanim-xs='{"delay":0.1}'>Race Fees</h2>
                     </div>
 
                     <div class="overflow-hidden">
-                        <h4 class="mb-4 d-flex align-items-center" data-zanim-xs='{"delay":0.3}'><span>$200</span><span
-                                class="border border-danger text-danger fw-semibold px-1 fs-10 rounded ms-2">Includes all events!</span>
+                        <h4 class="mb-4 d-flex align-items-center" data-zanim-xs='{"delay":0.3}'><span>$200</span>
                         </h4>
                     </div>
                     <div class="overflow-hidden">
@@ -369,15 +371,14 @@
 
                 </div>
                 <div class="col-10 col-md-6 col-lg-4 px-lg-4 mt-6 mt-md-0" data-zanim-timeline="{}"
-                     data-zanim-trigger="scroll"><span class="text-black me-3 fs-2 fab fa-sistrix"
+                     data-zanim-trigger="scroll"><span class="text-black me-3 fs-3 fab fa-sistrix"
                                                        data-zanim-xs='{"delay":0.2,"animation":"slide-right"}'></span>
                     <div class="overflow-hidden mt-3">
                         <h2 data-zanim-xs='{"delay":0.1}'>Try-it Program</h2>
                     </div>
 
                     <div class="overflow-hidden">
-                        <h4 class="mb-4 d-flex align-items-center" data-zanim-xs='{"delay":0.3}'><span>$60</span><span
-                                class="border border-danger text-danger fw-semibold px-1 fs-10 rounded ms-2">1st year students only</span>
+                        <h4 class="mb-4 d-flex align-items-center" data-zanim-xs='{"delay":0.3}'><span>$60</span>
                         </h4>
                     </div>
                     <div class="overflow-hidden">
@@ -398,15 +399,35 @@
 
     <!-- ============================================-->
     <!-- <section> begin ============================-->
-    <section class="py-0" id="defaultCta3">
+    <section class="py-0" id="signup">
 
         <div class="container">
             <div class="row flex-center bg-dark rounded py-6 text-center">
                 <div class="col-lg-7 text-lg-start ps-lg-5">
-                    <h3 class="mb-0 text-white">Ready to sign up? Want to learn more?</h3>
+                    <h3 class="mb-0 text-white">Ready to sign up?</h3>
                 </div>
                 <div class="col-lg-auto pe-lg-5 mt-4 mt-lg-0"><a class="btn btn-danger"
                                                                  href="https://ohiomtb.org/ride/">Visit Ohio NICA</a>
+                </div>
+            </div>
+        </div>
+        <!-- end of .container-->
+
+    </section>
+    <!-- <section> close ============================-->
+    <!-- ============================================-->
+
+    <!-- ============================================-->
+    <!-- <section> begin ============================-->
+    <section id="contact">
+
+        <div class="container">
+            <div class="row justify-content-center text-center">
+                <div class="col-lg-9 col-xl-8">
+                    <h2 class="text-decoration-underline mb-3 fs-6 fs-sm-5">Contact us</h2>
+                    <p class="lead text-body-tertiary fst-italic">If you have more questions, please feel free to email
+                        us at:
+                        <a href="mailto:northcoastgnarwhals@gmail.com">northcoastgnarwhals@gmail.com</a></p>
                 </div>
             </div>
         </div>
