--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
             <div class="row">
                 <div class="col-12">
                     <h1 class="text-decoration-underline">Equipment</h1>
-                    <p class="lead text-body-tertiary fst-italic">A bike, a helmet and a water bottle all you need.</p>
+                    <p class="lead text-body-tertiary fst-italic">A bike, a helmet and a water bottle are all you need.</p>
                 </div>
                 <div class="col-lg-6 pe-lg-6">
                     <div class="d-flex align-items-center mb-4">
