--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
                     </div>
 
                     <div class="overflow-hidden">
-                        <h4 class="mb-4 d-flex align-items-center" data-zanim-xs='{"delay":0.3}'><span>$200</span>
+                        <h4 class="mb-4" data-zanim-xs='{"delay":0.3}'><span>$200</span>
                         </h4>
                     </div>
                     <div class="overflow-hidden">
@@ -378,7 +378,7 @@
                     </div>
 
                     <div class="overflow-hidden">
-                        <h4 class="mb-4 d-flex align-items-center" data-zanim-xs='{"delay":0.3}'><span>$60</span>
+                        <h4 class="mb-4 " data-zanim-xs='{"delay":0.3}'><span>$60</span>
                         </h4>
                     </div>
                     <div class="overflow-hidden">
