--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                     <div class="overflow-hidden">
                         <p data-zanim-xs='{"delay":0.3}' data-zanim-trigger="scroll">The official race schedule is
                             available on the Ohio Interscholastic Cycling League website.
-                            <a class="btn btn-outline-dark btn-sm mt-3" href="https://ohiomtb.org/race-season/">View the
+                            <a class="btn btn-outline-dark btn-sm mt-3" href="https://ohiomtb.org/2025-nica-season/">View the
                                 Race Schedule</a>
                         </p>
                     </div>
