--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         "@type": "SportsTeam",
         "name": "North Coast Gnarwhals",
         "sport": "Mountain Biking",
-        "description": "Cleveland area's only team affiliated with the National Interscholastic Cycling Association (NICA)",
+        "description": "Cleveland area's youth mountain bike race team affiliated with the National Interscholastic Cycling Association (NICA)",
         "location": {
             "@type": "Place",
             "name": "Cleveland, Ohio",
