--- a/index.html
+++ b/index.html
@@ -6,11 +6,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <!-- ===============================================-->
+    <!--    SEO Meta Tags-->
+    <!-- ===============================================-->
+    <meta name="description" content="Join the North Coast Gnarwhals, Cleveland's premier youth mountain bike team. NICA-affiliated racing for grades 5-12. No experience needed - practices in Medina, Ohio.">
+    <meta name="keywords" content="youth mountain biking, Cleveland cycling, NICA team, Ohio mountain bike racing, Medina trails, youth sports Cleveland">
+    <meta name="author" content="North Coast Gnarwhals">
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.gnarwhals.org/">
+    <meta property="og:title" content="North Coast Gnarwhals - Youth Mountain Bike Racing in Cleveland">
+    <meta property="og:description" content="Cleveland's premier youth mountain bike team. NICA-affiliated racing for grades 5-12. No experience needed.">
+    <meta property="og:image" content="https://www.gnarwhals.org/assets/img/gnar-primary.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://www.gnarwhals.org/">
+    <meta property="twitter:title" content="North Coast Gnarwhals - Youth Mountain Bike Racing in Cleveland">
+    <meta property="twitter:description" content="Cleveland's premier youth mountain bike team. NICA-affiliated racing for grades 5-12.">
+    <meta property="twitter:image" content="https://www.gnarwhals.org/assets/img/gnar-primary.png">
 
     <!-- ===============================================-->
     <!--    Document Title-->
     <!-- ===============================================-->
-    <title>North Coast Gnarwhals: Youth Mountain Bike Racing in Cleveland</title>
+    <title>North Coast Gnarwhals - Youth Mountain Bike Racing in Cleveland | Ohio NICA Team</title>
 
 
     <!-- ===============================================-->
@@ -36,6 +56,42 @@
     <link href="assets/css/theme.css" rel="stylesheet"/>
     <link href="assets/css/user.css" rel="stylesheet"/>
 
+    <!-- ===============================================-->
+    <!--    Schema.org Structured Data-->
+    <!-- ===============================================-->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "SportsTeam",
+        "name": "North Coast Gnarwhals",
+        "sport": "Mountain Biking",
+        "description": "Cleveland area's only team affiliated with the National Interscholastic Cycling Association (NICA)",
+        "location": {
+            "@type": "Place",
+            "name": "Cleveland, Ohio",
+            "address": {
+                "@type": "PostalAddress",
+                "addressLocality": "Cleveland",
+                "addressRegion": "OH",
+                "addressCountry": "US"
+            }
+        },
+        "memberOf": {
+            "@type": "Organization",
+            "name": "National Interscholastic Cycling Association",
+            "url": "https://nationalmtb.org/"
+        },
+        "email": "northcoastgnarwhals@gmail.com",
+        "url": "https://www.gnarwhals.org",
+        "foundingDate": "2023",
+        "audience": {
+            "@type": "EducationalAudience",
+            "educationalRole": "student",
+            "audienceType": "grades 5-12"
+        }
+    }
+    </script>
+
 </head>
 
 
@@ -47,7 +103,7 @@
      data-zanim-xs='{"from":{"opacity":1,"y":-37},"to":{"opacity":1,"y":0},"ease":"CubicBezier","duration":0.8,"delay":0.3}'
      data-zanim-trigger="scroll" data-exclusive="true">
     <div class="fancynavbar-togglerbar"><a class="fancynavbar-brand" href="index.html"><img
-            class="fancynavbar-brand-img" src="assets/img/gnar-secondary.png" alt="" width="45" height="45"
+            class="fancynavbar-brand-img" src="assets/img/gnar-secondary.png" alt="North Coast Gnarwhals logo" width="45" height="45"
             data-zanim-lg='{"from":{"opacity":0,"x":45},"to":{"opacity":1,"x":0},"ease":"CubicBezier","duration":0.8,"delay":0.4}'
             data-zanim-trigger="scroll"/>
 
@@ -110,9 +166,9 @@
                             Mountain Bike Racing in Cleveland</h1>
                     </div>
                     <div class="overflow-hidden">
-                        <h4 class="fw-normal mb-4 text-white text-opacity-85 mt-5" data-zanim-xs='{"delay":0.2}'>For
+                        <h2 class="fw-normal mb-4 text-white text-opacity-85 mt-5" data-zanim-xs='{"delay":0.2}'>For
                             students in grades 5-12 of all ability levels, with seasons running from late May through
-                            early October</h4>
+                            early October</h2>
                     </div>
 
                 </div>
@@ -131,8 +187,8 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-7">
-                    <h1 class="mb-3 fs-6 fs-sm-5 text-decoration-underline">Who we are</h1>
-                    <p>The North Coast Gnarwhals are the Cleveland area’s only team affiliated with the <a
+                    <h2 class="mb-3 fs-6 fs-sm-5 text-decoration-underline">Who we are</h2>
+                    <p>The North Coast Gnarwhals are the Cleveland area's only team affiliated with the <a
                             href="https://nationalmtb.org/">National Interscholastic Cycling Association (NICA)</a> and
                         compete as part of the Ohio Interscholastic Cycling League. Open to students in grades 5-12, the
                         Gnarwhals emphasize teamwork, personal growth, and the joy of riding—no tryouts, no cuts, just a
@@ -144,12 +200,12 @@
             <div class="row mt-3 mb-3">
                 <div class="col-sm px-lg-2 mt-2 mt-lg-0">
                     <img class="rounded img-fluid w-50"
-                         src="assets/img/gnar-primary.png" alt=""
+                         src="assets/img/gnar-primary.png" alt="North Coast Gnarwhals team logo featuring stylized narwhal design"
                          data-zanim-lg='{"delay":0.1,"animation":"zoom-in"}'
                          data-zanim-trigger="scroll"/></div>
                 <div class="col-sm px-lg-2 mt-2 mt-lg-0">
                     <img class="rounded img-fluid w-50" src="assets/img/NICA-Large.png"
-                         alt="" data-zanim-lg='{"delay":0.3,"animation":"zoom-in"}'
+                         alt="National Interscholastic Cycling Association (NICA) official logo" data-zanim-lg='{"delay":0.3,"animation":"zoom-in"}'
                          data-zanim-trigger="scroll"/>
                 </div>
             </div>
@@ -177,7 +233,7 @@
                         </div>
                         <div class="flex-1">
                             <div class="overflow-hidden">
-                                <h4 class="mb-2" data-zanim-xs='{"delay":0.1,"animation":"slide-right"}'>Dates</h4>
+                                <h3 class="mb-2" data-zanim-xs='{"delay":0.1,"animation":"slide-right"}'>Dates</h3>
                             </div>
                             <div class="overflow-hidden">
                                 <p data-zanim-xs='{"delay":0.2,"animation":"slide-right"}'>Mondays and Thursdays
@@ -195,8 +251,8 @@
                         </div>
                         <div class="flex-1">
                             <div class="overflow-hidden">
-                                <h4 class="mb-2" data-zanim-xs='{"delay":0.1,"animation":"slide-right"}'>Times
-                                </h4>
+                                <h3 class="mb-2" data-zanim-xs='{"delay":0.1,"animation":"slide-right"}'>Times
+                                </h3>
                             </div>
                             <div class="overflow-hidden">
                                 <p data-zanim-xs='{"delay":0.2,"animation":"slide-right"}'>6:00PM to 7:30PM</p>
@@ -211,7 +267,7 @@
                         </div>
                         <div class="flex-1">
                             <div class="overflow-hidden">
-                                <h4 class="mb-2" data-zanim-xs='{"delay":0.1,"animation":"slide-right"}'>Locations</h4>
+                                <h3 class="mb-2" data-zanim-xs='{"delay":0.1,"animation":"slide-right"}'>Locations</h3>
                             </div>
                             <div class="overflow-hidden">
                                 <p data-zanim-xs='{"delay":0.2,"animation":"slide-right"}'>Mondays at the Medina
@@ -229,7 +285,7 @@
                         </div>
                         <div class="flex-1">
                             <div class="overflow-hidden">
-                                <h4 class="mb-2" data-zanim-xs='{"delay":0.1,"animation":"slide-right"}'>Commitment</h4>
+                                <h3 class="mb-2" data-zanim-xs='{"delay":0.1,"animation":"slide-right"}'>Commitment</h3>
                             </div>
                             <div class="overflow-hidden">
                                 <p data-zanim-xs='{"delay":0.2,"animation":"slide-right"}'>No practice commitment. The
@@ -268,12 +324,12 @@
                     </div>
                 </div>
                 <div class="col-sm-8 col-lg-4 mt-4 mt-lg-0 px-lg-4"><img class="w-100 rounded"
-                                                                         src="assets/img/gnar-race-pic.jpeg" alt=""
+                                                                         src="assets/img/gnar-race-pic.jpeg" alt="North Coast Gnarwhals team members competing in Ohio NICA mountain bike race"
                                                                          data-zanim-xs='{"animation":"zoom-out","delay":0.1}'
                                                                          data-zanim-trigger="scroll"/></div>
                 <div class="col-sm-8 col-lg-4 mt-5 mt-lg-0 ps-lg-3 ps-xl-4">
                     <div class="overflow-hidden">
-                        <h4 class="mb-3" data-zanim-xs='{"delay":0.2}' data-zanim-trigger="scroll">Race Schedule</h4>
+                        <h3 class="mb-3" data-zanim-xs='{"delay":0.2}' data-zanim-trigger="scroll">Race Schedule</h3>
                     </div>
                     <div class="overflow-hidden">
                         <p data-zanim-xs='{"delay":0.3}' data-zanim-trigger="scroll">The official race schedule is
@@ -298,7 +354,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <h1 class="text-decoration-underline">Equipment</h1>
+                    <h2 class="text-decoration-underline">Equipment</h2>
                     <p class="lead text-body-tertiary fst-italic">A bike, a helmet and a water bottle are all you need.</p>
                 </div>
                 <div class="col-lg-6 pe-lg-6">
@@ -343,7 +399,7 @@
                      data-zanim-trigger="scroll"><span class="text-black me-3 fs-3 fas fa-file-invoice-dollar"
                                                        data-zanim-xs='{"delay":0.2,"animation":"slide-right"}'></span>
                     <div class="overflow-hidden mt-3">
-                        <h2 data-zanim-xs='{"delay":0.1}'>Program Costs</h2>
+                        <h3 data-zanim-xs='{"delay":0.1}'>Program Costs</h3>
                     </div>
 
                     <div class="overflow-hidden">
@@ -358,7 +414,7 @@
                      data-zanim-trigger="scroll"><span class="text-black me-3 fs-3 fas fa-flag-checkered"
                                                        data-zanim-xs='{"delay":0.2,"animation":"slide-right"}'></span>
                     <div class="overflow-hidden mt-3">
-                        <h2 data-zanim-xs='{"delay":0.1}'>Race Fees</h2>
+                        <h3 data-zanim-xs='{"delay":0.1}'>Race Fees</h3>
                     </div>
 
                     <div class="overflow-hidden">
@@ -374,7 +430,7 @@
                      data-zanim-trigger="scroll"><span class="text-black me-3 fs-3 fab fa-sistrix"
                                                        data-zanim-xs='{"delay":0.2,"animation":"slide-right"}'></span>
                     <div class="overflow-hidden mt-3">
-                        <h2 data-zanim-xs='{"delay":0.1}'>Try-it Program</h2>
+                        <h3 data-zanim-xs='{"delay":0.1}'>Try-it Program</h3>
                     </div>
 
                     <div class="overflow-hidden">
@@ -382,8 +438,8 @@
                         </h4>
                     </div>
                     <div class="overflow-hidden">
-                        <p data-zanim-xs='{"delay":0.4}'>For first year student athletes who aren’t sure if racing is
-                            going to be their thing. $60 for one race with the option of ‘buying up” to the full race
+                        <p data-zanim-xs='{"delay":0.4}'>For first year student athletes who aren't sure if racing is
+                            going to be their thing. $60 for one race with the option of 'buying up" to the full race
                             package.</p>
                     </div>
 
@@ -404,7 +460,7 @@
         <div class="container">
             <div class="row flex-center bg-dark rounded py-6 text-center">
                 <div class="col-lg-7 text-lg-start ps-lg-5">
-                    <h3 class="mb-0 text-white">Ready to sign up?</h3>
+                    <h2 class="mb-0 text-white">Ready to sign up?</h2>
                 </div>
                 <div class="col-lg-auto pe-lg-5 mt-4 mt-lg-0"><a class="btn btn-danger"
                                                                  href="https://ohiomtb.org/ride/">Visit Ohio NICA</a>
