--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
                         </div>
                     </div>
                     <p>No bike? No problem. You can borrow a Gnarwhals loaner bike for the season or bring your own if you prefer.</p>
-                    <p><a class="btn btn-outline-dark btn-sm mt-3" href="https://ohiomtb.org/2025-nica-season/">Request a loaner bike</a></p>
+                    <p><a class="btn btn-outline-dark btn-sm mt-3" href="https://docs.google.com/forms/d/e/1FAIpQLSeqeBYzTLTn3razhIfrRCIPykBIvS8bLE-9HDdM3RnPjScqcg/viewform?usp=dialog">Request a loaner bike</a></p>
                 </div>
                 <div class="col-lg-6 pt-6 pt-lg-0 pe-lg-6">
                     <div class="d-flex align-items-center mb-4">
